--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
       </ol>
     </div>
 
-    <!-- <h2>
+    <h2>
         <span class="lang-jp">学位論文</span>
         <span class="lang-en">Thesis</span>
     </h2>
@@ -654,7 +654,7 @@
         </li>
       </ul>
     </div>
-  </div> -->
+  </div>
 
   <div id="works" class="tab-content">
     <h2><span class="lang-jp">製作物・スキル</span><span class="lang-en">Works & Skills</span></h2>
