--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" ref="/Image/favicon.ico">
+  <link rel="icon" ref="Image/favicon.ico">
   <title>光岡日菜子 / Hinako Mitsuoka</title>
   <meta name="description" content="光岡日菜子のポートフォリオ。">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
