--- a/index.html
+++ b/index.html
@@ -369,12 +369,33 @@
       <span class="lang-en">Master's Student at Meijo University / Hotta Lab.</span>
     </div>
     
-    <div class="social-links">
+    <!-- <div class="social-links">
       <a href="https://github.com/ppppeach-jam"><i class="fab fa-github"></i></a>
       <a href="https://twitter.com/ramentabetai__1"><i class="fab fa-x-twitter"></i></a>
       <a href="https://scholar.google.co.jp/citations?hl=en&user=SODa45gAAAAJ"><i class="fa-brands fa-google-scholar"></i></a>
       <a href="https://wwwms.meijo-u.ac.jp/kazuhotta/"><i class="fa-solid fa-flask"></i></a>
       <a href="mailto:200442165@ccalumni.meijo-u.ac.jp"><i class="fas fa-envelope"></i></a>
+    </div> -->
+
+    <div class="social-links">
+      <a class="social-link" href="https://github.com/ppppeach-jam" target="_blank" rel="noopener noreferrer">
+        <i class="fab fa-github" aria-hidden="true"></i><span>GitHub</span>
+      </a>
+      <a class="social-link" href="https://twitter.com/ramentabetai__1" target="_blank" rel="noopener noreferrer">
+        <i class="fab fa-x-twitter" aria-hidden="true"></i><span>X</span>
+      </a>
+      <a class="social-link" href="https://scholar.google.co.jp/citations?hl=en&user=SODa45gAAAAJ" target="_blank" rel="noopener noreferrer">
+        <i class="fa-brands fa-google-scholar" aria-hidden="true"></i><span>Google Scholar</span>
+      </a>
+      <a class="social-link" href="https://wwwms.meijo-u.ac.jp/kazuhotta/" target="_blank" rel="noopener noreferrer">
+        <i class="fa-solid fa-flask" aria-hidden="true"></i><span>Lab</span>
+      </a>
+      <a class="social-link" href="mailto:200442165@ccalumni.meijo-u.ac.jp">
+        <i class="fas fa-envelope" aria-hidden="true"></i><span>Email</span>
+      </a>
+      <a class="social-link" href="linkedin.com/in/日菜子-光岡-71668b3b3" target="_blank" rel="noopener noreferrer">
+        <i class="fab fa-linkedin" aria-hidden="true"></i><span>LinkedIn</span>
+      </a>
     </div>
   </header>
 
