--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
       <a class="social-link" href="mailto:200442165@ccalumni.meijo-u.ac.jp">
         <i class="fas fa-envelope" aria-hidden="true"></i><span>Email</span>
       </a>
-      <a class="social-link" href="linkedin.com/in/日菜子-光岡-71668b3b3" target="_blank" rel="noopener noreferrer">
+      <a class="social-link" href="https://www.linkedin.com/in/%E6%97%A5%E8%8F%9C%E5%AD%90-%E5%85%89%E5%B2%A1-71668b3b3/" target="_blank" rel="noopener noreferrer">
         <i class="fab fa-linkedin" aria-hidden="true"></i><span>LinkedIn</span>
       </a>
     </div>
