--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
         <i class="fab fa-github" aria-hidden="true"></i><span>GitHub</span>
       </a>
       <a class="social-link" href="https://twitter.com/ramentabetai__1" target="_blank" rel="noopener noreferrer">
-        <i class="fab fa-x-twitter" aria-hidden="true"></i><span>X</span>
+        <i class="fab fa-x-twitter" aria-hidden="true"></i><span>@ramentabetai__1</span>
       </a>
       <a class="social-link" href="https://scholar.google.co.jp/citations?hl=en&user=SODa45gAAAAJ" target="_blank" rel="noopener noreferrer">
         <i class="fa-brands fa-google-scholar" aria-hidden="true"></i><span>Google Scholar</span>
