--- a/index.html
+++ b/index.html
@@ -144,9 +144,11 @@
       font-size: 20px;
     }
     
-    .social-links a.social-link span {
-      font-weight: 400;
-      opacity: 0.9;
+    .social-links a.social-link span{
+      font-size: 1em;
+      font-weight: 500;
+      opacity: 0.8; 
+      color: var(--text);
     }
 
     /* === Tabs Navigation === */
