--- a/index.html
+++ b/index.html
@@ -689,7 +689,7 @@
       </ol>
     </div>
 
-    <h2>
+    <!-- <h2>
         <span class="lang-jp">学位論文</span>
         <span class="lang-en">Thesis</span>
     </h2>
@@ -701,7 +701,7 @@
             「TransformerとFeedbackを用いた細胞画像のセグメンテーション精度向上」
         </li>
       </ul>
-    </div>
+    </div> -->
   </div>
 
   <div id="works" class="tab-content">
